# gill

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  output.ppm  run.sh
data/: bunny.yaml  peter.yaml  planes.yaml  simple.yaml  simple_1.yaml  simple_2.yaml  sphere.yaml  walt.yaml  woola.yaml
doc/: CMakeLists.txt  Doxyfile.in
include/core/: bbox.h  camera.h  kdtree.h  matrix.h  mesh.h  parser.h  primitive.h  ray.h  scene.h  transform.h  vector.h
include/geometry/: disk.h  geometry.h  sphere.h
lib/: CMakeLists.txt
lib/core/: bbox.cpp  matrix.cpp  mesh.cpp  parser.cpp  primitive.cpp  ray.cpp  scene.cpp  transform.cpp  vector.cpp
lib/geometry/: disk.cpp  geometry.cpp  sphere.cpp
scripts/: configure  run-examples  run-tests
src/: CMakeLists.txt  gill.cpp  parser.cpp  parser.h
src/camera/: perspective.cpp  perspective.h
src/core/: aggregate.cpp  aggregate.h  bbox.h  bsdf.cpp  bsdf.h  camera.cpp  camera.h  film.h  filter.cpp  filter.h  fresnel.cpp  fresnel.h  geometry.h  integrator.h  intersection.h  kdtree.cpp  kdtree.h  material.h  math.cpp  math.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  montecarlo.h  parser.cpp  parser.h  primitive.cpp  primitive.h  random.h  ray.h  renderer.h  sampler.cpp  sampler.h  scene.cpp  scene.h  spectrum.cpp  spectrum.h  transform.cpp  transform.h  (+1 more)
src/filter/: box.cpp  box.h  gaussian.cpp  gaussian.h  mitchell.cpp  mitchell.h  triangle.cpp  triangle.h
src/geometry/: geometry.h  mesh.cpp  mesh.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/integrator/: path.cpp  path.h
src/material/: emissive.cpp  emissive.h  glass.cpp  glass.h  matte.cpp  matte.h  mirror.cpp  mirror.h
src/renderer/: sampled.cpp  sampled.h  sampler.cpp  sampler.h
src/sampler/: random.cpp  random.h  stratified.cpp  stratified.h
test/: CMakeLists.txt
test/core/: bbox.cpp  matrix.cpp  ray.cpp  transform.cpp  vector.cpp
test/geometry/: disk.cpp  sphere.cpp
tools/: resample_cie.cpp  resample_rgb.cpp
tools/cmake/: FindYAML.cmake
