find_package(YAML REQUIRED)
include_directories(${LIBYAML_INCLUDE_DIR})

file(GLOB_RECURSE LIB_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
list(REMOVE_ITEM LIB_FILES "gill.cpp")
add_library(${PROJECT_LIB_TARGET} STATIC ${LIB_FILES})
target_link_libraries(${PROJECT_LIB_TARGET} ${LIBYAML_LIBRARIES})
set_property(TARGET ${PROJECT_LIB_TARGET} PROPERTY CXX_STANDARD 11)

add_executable(${PROJECT_BIN_TARGET} "gill.cpp")
target_link_libraries(${PROJECT_BIN_TARGET} ${PROJECT_LIB_TARGET})
set_property(TARGET ${PROJECT_BIN_TARGET} PROPERTY CXX_STANDARD 11)
